<resources>
    <string name="app_name">PFP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- string aja -->

    <string name="detail" translatable="false">Detail</string>
    <string name="register" translatable="false">Daftar</string>
    <string name="masukkan_username" translatable="false">Masukkan Username</string>
    <string name="masukkan_email" translatable="false">Masukkan Email</string>
    <string name="masukan_konfirmasi_password" translatable="false">Masukan Konfirmasi Kata Sandi</string>
    <string name="daftar" translatable="false">Daftar</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Kata Sandi</string>
    <string name="login" translatable="false">Masuk</string>
    <string name="belum_punya_akun" translatable="false">Belum Punya akun?</string>
    <string name="username" translatable="false">Nama Panggilan</string>
    <string name="nama_lengkap" translatable="false">Nama Lengkap</string>
    <string name="alamat" translatable="false">Alamat</string>
    <string name="update" translatable="false">Perbarui</string>
    <string name="logout" translatable="false">Keluar</string>
    <string name="masukkan_password" translatable="false">Masukan Kata Sandi</string>
    <string name="tanggal_lahir" translatable="false">Tanggal Lahir</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="home" translatable="false">Home</string>
    <string name="welcome" translatable="false">WELCOME</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="judul" translatable="false">judul</string>
    <string name="_05_05_2023" translatable="false">05_05_2023</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="transaction_history">Transaction History</string>
</resources>